# searchlauncher

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
src/multisearch/: __init__.py  cli.py  gui.py  search.py
src/searchlauncher/: __init__.py  cli.py  gui.py  search.py  settings.py  utils.py
src/searchlauncher/settings/: default.toml
tests/: test_cli.py  test_settings.py  test_templates.py
