[tool.poetry]
name = "searchlauncher"
version = "0.1.0"
description = "Search multiple websites using a single shortcut."
authors = ["Mikuláš Zelinka <mikulas@zelinka.dev>"]
readme = "README.md"
repository = "https://github.com/MikulasZelinka/searchlauncher"

[tool.poetry.scripts]
searchlauncher = 'searchlauncher.cli:main'

[tool.poetry.dependencies]
python = "^3.11"
keyboard = "^0.13.5"
typer = "^0.7.0"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pyproject-flake8 = "^0.0.1a5"
pytest = "^7.2.0"
mypy = "^0.931"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.py$'
exclude = ''

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "keyboard",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
